Cgroups: Incorrect detection logic on old systems in hotspot

XMLWordPrintable

    • b15
    • linux

        This bug is similar to JDK-8239559, but for hotspot's cgroup version detection heuristic. Currently on old systems it prints this (even though this is cgroups v1):

        ./images/jdk/bin/java -Xlog:os+container=trace -version
        [0.004s][trace][os,container] OSContainer::init: Initializing Container Support
        [0.005s][trace][os,container] Mount point for cgroupv2 not found in /proc/self/mountinfo
        openjdk version "15.0.0.1-internal" 2020-02-20

        This used to be:
        # java -Xlog:os+container=trace -version
        [0.000s][trace][os,container] OSContainer::init: Initializing Container Support
        [0.001s][debug][os,container] Required cgroup memory subsystem not found

              Assignee:
              Severin Gehwolf
              Reporter:
              Severin Gehwolf
              Votes:
              0 Vote for this issue
              Watchers:
              6 Start watching this issue

                Created:
                Updated:
                Resolved: