8239785: Cgroups: Incorrect detection logic on old systems in hotspot

Return NULL subsystem if no cgroup controllers are mounted.

Reviewed-by: bobv, mbaesken